--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,18 @@
 <html>
-	<head>
-		<title>Garrett's Blog</title>
-	</head>
-	<body>
-		<div>
-			<h1><a href="">Garrett's Blog</a></h1>
-		</div>
-		
-		<div>
-			<p>Published: 12.01.2016, 2:43</p>
-			<h2><a href="">My First Post</a></h2>
-			<p>Go Navy!!! Beat Army!!!
-		</div>
-		
-		<div>
-			<p>Published: 12.01.2016, 2:44</p>
-			<h2><a href="">My Second Post</a></h2>
-			<p>... and Beat Temple!!!
-		</div>
-	</body>
+    <head>
+        <title>Garrett's Blog</title>
+    </head>
+    <body>
+        <div>
+            <h1><a href="">Garrett's Blog</a></h1>
+        </div>
+        
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href = "">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
+    </body>
 </html>
