--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -2,12 +2,10 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="date">
-                <p>{{ post.published_date|date:'d-m-Y' }}</p>
-        </div>
         <div class="post">
+            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p>{{ post.text|truncatechars:200 }}</p>
         </div>
     {% endfor %}
 {% endblock %}
